--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 .App-logo {
